--- a/meson_options.txt
+++ b/meson_options.txt
@@ -13,7 +13,7 @@ option('cue', type: 'boolean', value: true,
 option('neon', type: 'boolean', value: true,
        description: 'Whether the neon HTTP client is enabled')
 option('mms', type: 'boolean', value: true,
-       description: 'Whether the libmms MMS cllient is enabled')
+       description: 'Whether the libmms MMS client is enabled')
 
 
 # input plugins
