meson: hook up songchange plugin

--- a/src/meson.build
+++ b/src/meson.build
@@ -92,6 +92,10 @@ if cdaudio_enabled
   subdir('cd-menu-items')
 endif
 
+if get_option('songchange')
+  subdir('songchange')
+endif
+
 
 # input plugins
 if get_option('mpg123')
