--- a/meson_options.txt
+++ b/meson_options.txt
@@ -50,3 +50,8 @@ option('alsa', type: 'boolean', value: true,
        description: 'Whether ALSA support is enabled')
 option('pulse', type: 'boolean', value: true,
        description: 'Whether PulseAudio support is enabled')
+
+
+# general plugins
+option('songchange', type: 'boolean', value: true,
+       description: 'Whether the Song Change plugin is enabled')
