--- a/src/meson.build
+++ b/src/meson.build
@@ -110,6 +110,10 @@ if get_option('scrobbler2') and xml_dep.found()
   subdir('scrobbler2')
 endif
 
+if get_option('dbus') and get_option('mpris2')
+  subdir('mpris2')
+endif
+
 
 # input plugins
 if get_option('mpg123')
