Adding proper CPPFLAGS and LIBS to Makefile

--- a/src/vumeter-qt/Makefile
+++ b/src/vumeter-qt/Makefile
@@ -9,5 +9,5 @@ plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. ${QTOPENGL_CFLAGS} ${GL_CFLAGS}
-LIBS += -lm ${QTOPENGL_LIBS} ${GL_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. ${QT_CFLAGS}
+LIBS += -lm ${QT_LIBS}
