--- a/src/lyric_japan-qt/meson.build
+++ b/src/lyric_japan-qt/meson.build
@@ -1,5 +1,5 @@
-shared_module('lyricwiki-qt',
-  'lyricwiki.cc',
+shared_module('lyric_japan-qt',
+  'lyric_japan.cc',
   dependencies: [audacious_dep, qt_dep, glib_dep, xml_dep, audqt_dep],
   install: true,
   install_dir: general_plugin_dir
