--- a/meson.build
+++ b/meson.build
@@ -71,6 +71,7 @@ if cc.get_id() == 'gcc' or cc.get_id() == 'clang'
   ]
 
   cxx_flags = [
+    '-Wno-non-virtual-dtor',
     '-Woverloaded-virtual'
   ]
 
