vumeter-qt: Separate class implementations into different files.

--- a/src/vumeter-qt/Makefile
+++ b/src/vumeter-qt/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = vumeter-qt${PLUGIN_SUFFIX}
 
-SRCS = vumeter.cc
+SRCS = vumeter_qt.cc vumeter_qt_widget.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
