--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - sudo apt-get install libneon27-gnutls-dev libnotify-dev libpulse-dev
   - sudo apt-get install libsamplerate0-dev libsdl1.2-dev libsidplayfp-dev
   - sudo apt-get install libsndfile1-dev libsoxr-dev libvorbis-dev libwavpack-dev
-  - sudo apt-get install libxml2-dev libadplug-dev
+  - sudo apt-get install libxml2-dev libadplug-dev libqt5opengl5-dev
 install:
   - git clone git://github.com/audacious-media-player/audacious.git audacious
   - cd audacious
