add experimental stream tuning plugin (meson only for now)

--- a/src/meson.build
+++ b/src/meson.build
@@ -80,6 +80,7 @@ if get_option('qt')
   subdir('search-tool-qt')
   subdir('song-info-qt')
   subdir('statusicon-qt')
+  subdir('streamtuner')
 
   subdir('delete-files')
   subdir('skins-data')
