streamtuner: add autoconf build files

--- a/configure.ac
+++ b/configure.ac
@@ -493,6 +493,13 @@ ENABLE_PLUGIN_WITH_DEP(qtaudio,
     QTMULTIMEDIA,
     Qt5Multimedia)
 
+ENABLE_PLUGIN_WITH_DEP(streamtuner,
+    Stream tuner,
+    auto,
+    GENERAL,
+    QTNETWORK,
+    Qt5Network)
+
 test_qtglspectrum () {
     PKG_CHECK_MODULES(QTOPENGL, Qt5OpenGL, [
         QTOPENGL_CFLAGS="$QTOPENGL_CFLAGS -fPIC"
@@ -825,6 +832,7 @@ if test "x$USE_QT" = "xyes" ; then
     echo "  Song Info:                              yes"
     echo "  Spectrum Analyzer (2D):                 yes"
     echo "  Status Icon:                            yes"
+    echo "  Stream Tuner:                           $have_streamtuner"
     echo "  VU Meter:                               yes"
     echo
 fi
