--- a/extra.mk.in
+++ b/extra.mk.in
@@ -81,6 +81,8 @@ QTMULTIMEDIA_CFLAGS ?= @QTMULTIMEDIA_CFLAGS@
 QTMULTIMEDIA_LIBS ?= @QTMULTIMEDIA_LIBS@
 QTOPENGL_CFLAGS ?= @QTOPENGL_CFLAGS@
 QTOPENGL_LIBS ?= @QTOPENGL_LIBS@
+QTNETWORK_CFLAGS ?= @QTNETWORK_CFLAGS@
+QTNETWORK_LIBS ?= @QTNETWORK_LIBS@
 VORBIS_CFLAGS ?= @VORBIS_CFLAGS@
 VORBIS_LIBS ?= @VORBIS_LIBS@
 WAVPACK_CFLAGS ?= @WAVPACK_CFLAGS@
