streamtuner: add iHeartRadio (the monopoly formerly known as Clear Channel) stream browsing
ironically, they voluntarily gave me documentation for their API, with
no strings attached, presumably because they understand that more
listeners = more money.

did radionomy?  of course not.

--- a/src/streamtuner/Makefile
+++ b/src/streamtuner/Makefile
@@ -5,7 +5,9 @@ SRCS = \
 	shoutcast-widget.cc \
 	shoutcast-model.cc \
 	icecast-widget.cc \
-	icecast-model.cc
+	icecast-model.cc \
+        ihr-widget.cc \
+        ihr-model.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
