--- a/src/streamtuner/meson.build
+++ b/src/streamtuner/meson.build
@@ -8,6 +8,8 @@ if qtnetwork_dep.found()
     'shoutcast-widget.cc',
     'icecast-widget.cc',
     'icecast-model.cc',
+    'ihr-widget.cc',
+    'ihr-model.cc',
     dependencies: [qt_dep, qtnetwork_dep, audacious_dep, audqt_dep],
     install: true,
     install_dir: general_plugin_dir
