--- a/src/search-tool-qt/meson.build
+++ b/src/search-tool-qt/meson.build
@@ -1,4 +1,7 @@
 shared_module('search-tool-qt',
+  'html-delegate.cc',
+  'library.cc',
+  'search-model.cc',
   'search-tool-qt.cc',
   dependencies: [audacious_dep, qt_dep, glib_dep, audqt_dep],
   install: true,
