--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
   - sudo apt-get install libsamplerate0-dev libsdl1.2-dev libsidplayfp-dev
   - sudo apt-get install libsndfile1-dev libsoxr-dev libvorbis-dev libwavpack-dev
   - sudo apt-get install libxml2-dev libadplug-dev libqt5opengl5-dev
+  - sudo apt-get install libarchive-dev
 install:
   - git clone git://github.com/audacious-media-player/audacious.git audacious
   - cd audacious
