qtglspectrum: port to QOpenGLWidget from deprecated QGLWidget
still requires desktop OpenGL though, because immediate mode

--- a/src/qtglspectrum/meson.build
+++ b/src/qtglspectrum/meson.build
@@ -1,11 +1,6 @@
-qt_opengl_dep = dependency('qt5', version: qt_req, modules: ['OpenGL'])
-
-
-if qt_opengl_dep.found()
-  shared_module('gl-spectrum-qt',
-    'gl-spectrum.cc',
-    dependencies: [audacious_dep, qt_dep, qt_opengl_dep, audqt_dep],
-    install: true,
-    install_dir: visualization_plugin_dir
-  )
-endif
+shared_module('gl-spectrum-qt',
+  'gl-spectrum.cc',
+  dependencies: [audacious_dep, qt_dep, audqt_dep],
+  install: true,
+  install_dir: visualization_plugin_dir
+)
