moonstone: new interface plugin
this is basically a design sketch for what a simplified qtui would look
like.  there is still a lot to do, and a lot of questions still to
answer.  but enough is there to commit something, so here it is.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -84,3 +84,8 @@ option('vumeter', type: 'boolean', value: true,
        description: 'Whether the VUMeter visualization plugin is enabled')
 option('gl-spectrum', type: 'boolean', value: true,
        description: 'Whether the OpenGL spectrum visualization plugin is enabled')
+
+
+# interface plugins
+option('moonstone', type: 'boolean', value: true,
+       description: 'Whether the Moonstone UI plugin is enabled')
