moonstone: port QtUI playlist widget as a placeholder

--- a/src/moonstone/Makefile
+++ b/src/moonstone/Makefile
@@ -4,7 +4,11 @@ SRCS = moonstone.cc \
        main_window.cc \
        info_bar.cc \
        tool_bar.cc \
-       time_slider.cc
+       time_slider.cc \
+       playlist.cc \
+       playlist_tabs.cc \
+       playlist_header.cc \
+       playlist_model.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
