--- a/src/moonstone/meson.build
+++ b/src/moonstone/meson.build
@@ -7,7 +7,8 @@ moonstone_sources = [
   'playlist.cc',
   'playlist_header.cc',
   'playlist_model.cc',
-  'playlist_tabs.cc'
+  'playlist_tabs.cc',
+  'playlist_selection.cc'
 ]
 
 
