--- a/extra.mk.in
+++ b/extra.mk.in
@@ -83,6 +83,8 @@ QTOPENGL_CFLAGS ?= @QTOPENGL_CFLAGS@
 QTOPENGL_LIBS ?= @QTOPENGL_LIBS@
 QTNETWORK_CFLAGS ?= @QTNETWORK_CFLAGS@
 QTNETWORK_LIBS ?= @QTNETWORK_LIBS@
+QTX11EXTRAS_CFLAGS ?= @QTX11EXTRAS_CFLAGS@
+QTX11EXTRAS_LIBS ?= @QTX11EXTRAS_LIBS@
 VORBIS_CFLAGS ?= @VORBIS_CFLAGS@
 VORBIS_LIBS ?= @VORBIS_LIBS@
 WAVPACK_CFLAGS ?= @WAVPACK_CFLAGS@
