--- a/meson.build
+++ b/meson.build
@@ -42,8 +42,8 @@ xml_dep = dependency('libxml-2.0')
 if get_option('qt')
   qt_req = '>= 5.2'
   qt_dep = dependency('qt5', version: qt_req, required: true, modules: ['Core', 'Widgets', 'Gui'])
+  qtx11extras_dep = dependency('qt5', version: qt_req, required: false, modules: ['X11Extras'])
 endif
-
 
 cdaudio_enabled = false
 if get_option('cdaudio')
