--- a/meson_options.txt
+++ b/meson_options.txt
@@ -68,6 +68,8 @@ option('songchange', type: 'boolean', value: true,
        description: 'Whether the Song Change plugin is enabled')
 option('scrobbler2', type: 'boolean', value: true,
        description: 'Whether the Scrobbler plugin is enabled')
+option('streamtuner', type: 'boolean', value: false,
+       description: 'Whether the Stream Tuner plugin is enabled')
 option('notify', type: 'boolean', value: true,
        description: 'Whether the libnotify OSD plugin is enabled')
 
