--- a/src/meson.build
+++ b/src/meson.build
@@ -84,7 +84,6 @@ if get_option('qt')
   subdir('search-tool-qt')
   subdir('song-info-qt')
   subdir('statusicon-qt')
-  subdir('streamtuner')
 
   subdir('delete-files')
   subdir('skins-data')
@@ -99,6 +98,10 @@ if get_option('qt')
 
   if get_option('gl-spectrum')
     subdir('qtglspectrum')
+  endif
+
+  if get_option('streamtuner')
+    subdir('streamtuner')
   endif
 
   if get_option('moonstone')
