meson: Disable moonstone plugin by default
It is still in a very early stage, lacks many basic
features and hence should not be enabled by default.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -91,5 +91,5 @@ option('gl-spectrum', type: 'boolean', value: true,
 
 
 # interface plugins
-option('moonstone', type: 'boolean', value: true,
+option('moonstone', type: 'boolean', value: false,
        description: 'Whether the Moonstone UI plugin is enabled')
