Disable mpris2 on Windows
It assumes a GMainLoop is running and thus doesn't work with the
Qt event dispatcher for Win32. With some work it could be updated
to work like the D-Bus server in Audacious core, but it's probably
not that useful on Windows anyway.

--- a/configure.ac
+++ b/configure.ac
@@ -422,8 +422,12 @@ ENABLE_PLUGIN_WITH_TEST(lirc,
     GENERAL)
 
 test_mpris2 () {
-    unset have_mpris2
-    AC_CHECK_PROG(have_mpris2, gdbus-codegen, yes, no)
+    if test $HAVE_MSWINDOWS = yes ; then
+        have_mpris2=no
+    else
+        unset have_mpris2
+        AC_CHECK_PROG(have_mpris2, gdbus-codegen, yes, no)
+    fi
 }
 
 ENABLE_PLUGIN_WITH_TEST(mpris2,
