Sync buildsys from core

--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -73,7 +73,7 @@ DEP_CXXFLAGS = @DEP_CXXFLAGS@
 DEP_OBJCFLAGS = @DEP_OBJCFLAGS@
 DEP_OBJCXXFLAGS = @DEP_OBJCXXFLAGS@
 LN_S = @LN_S@
-MKDIR_P = mkdir -p
+MKDIR_P = @INSTALL@ -d
 INSTALL = @INSTALL@ -p
 SHELL = @SHELL@
 MSGFMT = @MSGFMT@
