meson: Disable mpris2 on Windows
Backport for commit 6196fdcb851eb49ee266.

--- a/src/meson.build
+++ b/src/meson.build
@@ -134,7 +134,7 @@ if get_option('scrobbler2') and xml_dep.found()
   subdir('scrobbler2')
 endif
 
-if get_option('dbus') and get_option('mpris2')
+if host_machine.system() != 'windows' and get_option('dbus') and get_option('mpris2')
   subdir('mpris2')
 endif
 
