meson: Add oss4 plugin

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -54,6 +54,8 @@ option('alsa', type: 'boolean', value: true,
        description: 'Whether ALSA support is enabled')
 option('jack', type: 'boolean', value: true,
        description: 'Whether JACK support is enabled')
+option('oss', type: 'boolean', value: true,
+       description: 'Whether OSS support is enabled')
 option('pulse', type: 'boolean', value: true,
        description: 'Whether PulseAudio support is enabled')
 option('sndio', type: 'boolean', value: true,
